apps/atom.io.fyi/src/components/DocsNavigation.module.css
docs-navigation.class {
	> site-directory,
	> on-this-page {
		position: fixed;
		padding-top: 5em;
		padding-bottom: 5em;
		top: 2px;
		z-index: 110;
		width: calc((100svw - 30px) / 2);
		max-height: 100svh;
		overflow-y: scroll;
		border-radius: 24px;

		@media screen and (min-width: 960px) {
			width: 240px;
		}

		nav {
			position: relative;
			pointer-events: all;
			display: flex;
			flex-flow: column;
			transition-property: all;
			transition-duration: 0.1s;
			gap: 1.33em;
			padding: 20px;

			> section {
				display: flex;
				flex-flow: column;
				> header {
					font-weight: 600;
					margin-bottom: 0.5em;
				}
				> main {
					display: flex;
					flex-flow: column;
					gap: 0.2em;
					section {
						display: flex;
						flex-flow: column;
						align-items: flex-start;
						> section {
							padding-left: 1em;
						}
						> a {
							padding: 0.2em 0.4em 0.25em;
							user-select: none;
							> low-emphasis {
								color: var(--fg-soft-3);
							}
						}
					}
				}
			}
		}
	}
	> site-directory {
		left: 10px;
		min-width: 240px;

		@media screen and (min-width: 960px) {
			right: auto;
			left: 1em;
			z-index: 10;
		}

		nav {
			margin-top: 3em;

			&[data-user-has-toggled="false"] {
				display: none;

				@media screen and (min-width: 960px) {
					margin-top: 0;
					display: flex;
				}
			}
		}
		dynamic-spotlight:first-of-type {
			display: block;

			@media screen and (min-width: 960px) {
				display: none;
			}
		}
	}
	> on-this-page {
		right: 10px;
		left: auto;

		@media screen and (min-width: 960px) {
			--right: 2em;
		}

		@media screen and (min-width: 1280px) {
			right: auto;
			left: calc(50vw + 400px);
			z-index: 10;
		}

		nav[data-user-has-toggled="false"] {
			display: none;

			@media screen and (min-width: 1280px) {
				display: flex;
			}
		}
	}
	> toggle-button {
		position: fixed;
		top: 3.5em;
		z-index: 140;
		border-radius: 50%;
		right: 1em;
		display: block;

		@media screen and (min-width: 960px) {
			right: 0.5em;
		}

		@media screen and (min-width: 1280px) {
			display: none;
		}
	}
	dynamic-spotlight:first-of-type {
		display: block;

		@media screen and (min-width: 1280px) {
			display: none;
		}
	}
}

